@@ -4,6 +4,7 @@ gatling \- high performance file server
 .SH SYNOPSIS
 .B gatling [-hnvVtdDfFUlaEe] [-i bind-to-ip] [-p bind-to-port] [-T seconds]
         \fB[-u uid] [-c dir] [-w workgroup] [-P bytes] [-O ip/port/regex]\fR
+        \fB[-r redir-url]
 .SH DESCRIPTION
 gatling is a HTTP and FTP server.  It will export the current working
 directory to the world.
@@ -74,6 +75,10 @@ all and always serve from the current working directory.
 Use \fB-T 600\fR to set the timeout for HTTP and FTP data connections to
 10 minutes (600 seconds, default is 23 seconds).  Use \fB-f -T 600\fR to
 set the timeout for FTP control connections (default is 600 seconds).
+
+If you use \fB-r http://master.example.com/\fR on mirror.example.com,
+and someone asks for a file that does not exist, gatling will not create
+a 404 error but a redirect to the same file on master.example.com.
 
 .SH "SIGNALS"
 Sending gatling SIGHUP will make it close all the server sockets (so you
